Bug fix: nav bar gap and body content hidden

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,6 +7,7 @@ html {
 body {
   margin: 0;
   height: 100%;
+  top: 100px;
 }
 
 nav {
@@ -17,6 +18,7 @@ nav {
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  top: 0;
 }
 
 nav img {
